force-app/main/default/objects/CommunityOpp__c/CommunityOpp__c.object-meta.xml
<CustomObject>
    <description>Entidad que modela las oportunidades para Comunidades.</description>
    <label>Contratación Online</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Nombre de Contratación Online</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contrataciones Online</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>