force-app/main/default/objects/CommunityOpp__c/fields/AnoHipoteca__c.field-meta.xml
<CustomField>
    <fullName>AnoHipoteca__c</fullName>
    <description>Año de la hipoteca del cliente especificado por el usuario</description>
    <label>Año de la Hipoteca</label>
    <length>4</length>
    <type>Text</type>
</CustomField>