force-app/main/default/objects/CommunityOpp__c/fields/CantidadPagar__c.field-meta.xml
<CustomField>
    <fullName>CantidadPagar__c</fullName>
    <description>Cantidad a pagar. Campo obtenido de la lista de precios.</description>
    <label>Cantidad a Pagar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>