force-app/main/default/objects/CommunityOpp__c/fields/CartaPago__c.field-meta.xml
<CustomField>
    <fullName>CartaPago__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el cliente puede aportar la Carta de Pago del impuesto de Actos Jurídicos Documentados</description>
    <inlineHelpText>Carta de Pago del impuesto de Actos Jurídicos Documentados</inlineHelpText>
    <label>Carta de Pago</label>
    <type>Checkbox</type>
</CustomField>