force-app/main/default/objects/CommunityOpp__c/fields/ComprobantePago__c.field-meta.xml
<CustomField>
    <fullName>ComprobantePago__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el cliente puede aportar el comprobante de pago de la Comisión de Apertura</description>
    <inlineHelpText>Comprobante de pago de la Comisión de Apertura</inlineHelpText>
    <label>Comprobante de pago</label>
    <type>Checkbox</type>
</CustomField>