force-app/main/default/objects/CommunityOpp__c/fields/ConsentimientoDatosSegundoTitular__c.field-meta.xml
<CustomField>
    <fullName>ConsentimientoDatosSegundoTitular__c</fullName>
    <description>El contacto que está contratando el producto tiene el consentimiento para proporcionar los datos del segundo titular</description>
    <label>Consentimiento almacenar datos 2 titular</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>