force-app/main/default/objects/CommunityOpp__c/fields/ContrFinalizado__c.field-meta.xml
<CustomField>
    <fullName>ContrFinalizado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check que indica si la contratación ha sido finalizada</description>
    <label>Contratación finalizada</label>
    <type>Checkbox</type>
</CustomField>