force-app/main/default/objects/CommunityOpp__c/fields/CuadroAmortizacion__c.field-meta.xml
<CustomField>
    <fullName>CuadroAmortizacion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Guardar el valor del flujo de Clausula suelo sobre si posee los documentos</description>
    <label>Cuadro de amortización</label>
    <type>Checkbox</type>
</CustomField>