force-app/main/default/objects/CommunityOpp__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Cliente asociado a la contratación online</description>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contrataciones Online</relationshipLabel>
    <relationshipName>Contrataciones_Online</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>