force-app/main/default/objects/CommunityOpp__c/fields/CuotaIndependiente__c.field-meta.xml
<CustomField>
    <fullName>CuotaIndependiente__c</fullName>
    <description>Campo que se rellena desde el flujo de tarjetas abusivas (Revolving)</description>
    <label>Cuota mensual independiente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>