force-app/main/default/objects/CommunityOpp__c/fields/DestinoPrestamo__c.field-meta.xml
<CustomField>
    <fullName>DestinoPrestamo__c</fullName>
    <description>Campo donde recogemos los valores marcados por el cliente relacionados al destino del préstamo</description>
    <label>Destino del Prestamo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Para comprar vivienda habitual</fullName>
            </value>
            <value>
                <fullName>Para comprar segunda vivienda</fullName>
            </value>
            <value>
                <fullName>Para comprar una vivienda destinada a alquiler</fullName>
            </value>
            <value>
                <fullName>No fue para comprar una vivienda</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>