force-app/main/default/objects/CommunityOpp__c/fields/Direccion__c.field-meta.xml
<CustomField>
    <fullName>Direccion__c</fullName>
    <description>Dirección indicada en el flow de contratación de un producto de la comunidad</description>
    <label>Dirección</label>
    <length>255</length>
    <type>Text</type>
</CustomField>