force-app/main/default/objects/CommunityOpp__c/fields/DNI__c.field-meta.xml
<CustomField>
    <fullName>DNI__c</fullName>
    <description>Campo para guardar el DNI que proporciona el titular en el flow de contratación de producto de la comunidad</description>
    <label>DNI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>