force-app/main/default/objects/CommunityOpp__c/fields/Email2Titular__c.field-meta.xml
<CustomField>
    <fullName>Email2Titular__c</fullName>
    <description>Se guarda el email del 2º titular en la contratación online para posteriormente poder enviar la información por correo a través de una alerta de correo electrónico de los flujos</description>
    <label>Email 2º Titular</label>
    <type>Email</type>
</CustomField>