force-app/main/default/objects/CommunityOpp__c/fields/EscriturasPrestamo__c.field-meta.xml
<CustomField>
    <fullName>EscriturasPrestamo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el cliente puede aportar escrituras del préstamo hipotecario, novaciones y ampliaciones que se hayan realizado</description>
    <label>Escrituras del préstamo</label>
    <type>Checkbox</type>
</CustomField>