force-app/main/default/objects/CommunityOpp__c/fields/EscriturasPrestamoHipotecario__c.field-meta.xml
<CustomField>
    <fullName>EscriturasPrestamoHipotecario__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Guardar el valor del flujo de Clausula suelo sobre si posee los documentos</description>
    <label>Escrituras del préstamo Hipotecario</label>
    <type>Checkbox</type>
</CustomField>