force-app/main/default/objects/CommunityOpp__c/fields/ExisteDemanda__c.field-meta.xml
<CustomField>
    <fullName>ExisteDemanda__c</fullName>
    <description>Guardar el valor del flujo de Clausula suelo sobre si ya existe alguna otra demanda</description>
    <label>Existe demanda anterior</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>