force-app/main/default/objects/CommunityOpp__c/fields/FacturaGestoria__c.field-meta.xml
<CustomField>
    <fullName>FacturaGestoria__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el cliente puede aportar la factura de la gestoría.</description>
    <label>Factura de la Gestoría</label>
    <type>Checkbox</type>
</CustomField>