force-app/main/default/objects/CommunityOpp__c/fields/FacturaNotaria__c.field-meta.xml
<CustomField>
    <fullName>FacturaNotaria__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el cliente puede aportar la factura de la notaría.</description>
    <label>Factura de la Notaría</label>
    <type>Checkbox</type>
</CustomField>