force-app/main/default/objects/CommunityOpp__c/fields/FacturaRegistroPropiedad__c.field-meta.xml
<CustomField>
    <fullName>FacturaRegistroPropiedad__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el cliente puede aportar la factura del Registro de la Propiedad.</description>
    <label>Factura del Registro de la Propiedad</label>
    <type>Checkbox</type>
</CustomField>