force-app/main/default/objects/CommunityOpp__c/fields/FacturaTasacion__c.field-meta.xml
<CustomField>
    <fullName>FacturaTasacion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el cliente puede aportar la factura de la tasación.</description>
    <label>Factura de la Tasación</label>
    <type>Checkbox</type>
</CustomField>