force-app/main/default/objects/CommunityOpp__c/fields/FirmadoAcuerdoBanco__c.field-meta.xml
<CustomField>
    <fullName>FirmadoAcuerdoBanco__c</fullName>
    <description>Picklist para guardar el valor del flujo de Clausula suelo de Acuerdo firmado con el banco</description>
    <label>Firmado Acuerdo con el Banco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>