force-app/main/default/objects/CommunityOpp__c/fields/Gratis__c.field-meta.xml
<CustomField>
    <fullName>Gratis__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Casilla que indica si el producto ha sido contratado gratis</description>
    <label>Producto Gratis</label>
    <type>Checkbox</type>
</CustomField>