force-app/main/default/objects/CommunityOpp__c/fields/IdOportunidad__c.field-meta.xml
<CustomField>
    <fullName>IdOportunidad__c</fullName>
    <description>Campo donde guardamos el Id de la oportunidad para poder recogerla desde la comunidad.</description>
    <label>IdOportunidad</label>
    <length>100</length>
    <type>Text</type>
</CustomField>