force-app/main/default/objects/CommunityOpp__c/fields/IDProducto__c.field-meta.xml
<CustomField>
    <fullName>IDProducto__c</fullName>
    <description>Id del producto asignado a la contratación online. Se guarda para poder utilizarlo en comprobaciones dentro de la comunidad</description>
    <label>ID Producto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>