force-app/main/default/objects/CommunityOpp__c/fields/IngresadoCantidad__c.field-meta.xml
<CustomField>
    <fullName>IngresadoCantidad__c</fullName>
    <description>Guardar el valor del flujo de Clausula suelo si ha ingresado cantidad del banco a consecuencia de la Clausula Suelo</description>
    <label>Ingresado cantidad del Banco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>