force-app/main/default/objects/CommunityOpp__c/fields/Interesuperior__c.field-meta.xml
<CustomField>
    <fullName>Interesuperior__c</fullName>
    <description>Campo que se rellena desde el flujo de Revolving</description>
    <label>Tipo de interés superior al 21 %</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>