force-app/main/default/objects/CommunityOpp__c/fields/ITP__c.field-meta.xml
<CustomField>
    <fullName>ITP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el cliente puede aportar el ITP por Afianzamiento</description>
    <inlineHelpText>ITP por Afianzamiento (en el caso de existir dicha liquidación abonada por el cliente)</inlineHelpText>
    <label>ITP</label>
    <type>Checkbox</type>
</CustomField>