force-app/main/default/objects/CommunityOpp__c/fields/OKHojaEncargo__c.field-meta.xml
<CustomField>
    <fullName>OKHojaEncargo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el cliente esta de acuerdo con la hoja de encargo mostrada.</description>
    <label>De acuerdo con Hoja de Encargo</label>
    <type>Checkbox</type>
</CustomField>