force-app/main/default/objects/CommunityOpp__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup que relaciona los objetos de contratacion online y oportunidad.</description>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contrataciones Online</relationshipLabel>
    <relationshipName>Contrataciones_Online</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>