force-app/main/default/objects/CommunityOpp__c/fields/SegundoTitular__c.field-meta.xml
<CustomField>
    <fullName>SegundoTitular__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para indicar quien es el contacto que actúa como segundo titular de la contratación online</description>
    <label>2º Titular</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contrataciones Online (2º Titular)</relationshipLabel>
    <relationshipName>Contrataciones_Online_Segundo_Titular</relationshipName>
    <type>Lookup</type>
</CustomField>