force-app/main/default/objects/CommunityOpp__c/fields/Telefono__c.field-meta.xml
<CustomField>
    <fullName>Telefono__c</fullName>
    <description>Campo para guardar el número de teléfono indicado en el flow de contratación de un producto de la comunidad</description>
    <label>Teléfono</label>
    <type>Phone</type>
</CustomField>