force-app/main/default/objects/CommunityOpp__c/fields/TieneVariosTitulares__c.field-meta.xml
<CustomField>
    <fullName>TieneVariosTitulares__c</fullName>
    <description>Campo para saber si el producto tiene varios titulares asociados</description>
    <label>Tiene varios titulares</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Sí, hay otro titular y está informado</fullName>
            </value>
            <value>
                <fullName>Hay otro titular, pero no está informado</fullName>
            </value>
            <value>
                <fullName>Hay más de dos titulares</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>