force-app/main/default/objects/CommunityOpp__c/fields/UltimoHipoteca__c.field-meta.xml
<CustomField>
    <fullName>UltimoHipoteca__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Guardar el valor del flujo de Clausula suelo sobre si posee los documentos</description>
    <label>Último recibo de la hipoteca</label>
    <type>Checkbox</type>
</CustomField>